Fix checkbox vertical alignment with text
Adjust task list checkbox top offset from 0.25em to 0.35em to properly
center with text at line-height 1.7.

--- a/Shared/Sources/MarkdownRenderer/Resources/base.css
+++ b/Shared/Sources/MarkdownRenderer/Resources/base.css
@@ -39,7 +39,7 @@ body {
   -webkit-appearance: checkbox;
   position: absolute;
   left: 0;
-  top: 0.25em;
+  top: 0.35em;
   width: 1em;
   height: 1em;
   margin: 0;
